copying over old blacklist

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="logo.png" alt="Server Logo" class="logo">
-    <h1>My Server Blacklist</h1>
+    <h1>HCR Blacklist</h1>
     <p class="subtitle">Keeping our community safe 🚫</p>
   </header>
 
@@ -35,7 +35,7 @@
   </div>
 
   <footer>
-    © 2025 My Discord Server | Blacklist System | Made with ❤️ by Admins
+    © 2025 HCR | Blacklist System | Made with ❤️ by Admins
   </footer>
 
   <script src="script.js"></script>
