--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <img src="logo.png" alt="Server Logo" class="logo">
     <h1>HCR Blacklist</h1>
     <p class="subtitle">Keeping our community safe 🚫</p>
-  </header>
+  <!-- Discord Button -->
+  <a href="https://discord.gg/uZyP2e7Ns2" target="_blank" class="discord-button">Join our Discord</a>
+</header>
 
   <div class="search-sort">
     <input type="text" id="searchBox" placeholder="🔍 Search by username...">
